2005-07-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/powerpc/jit3-powerpc.def: Fixed access to
	KaffeJIT3_getLabelName.

	* kaffe/kaffevm/jit3/funcs.h
	(HAVE_cvt_double_int_ieee, HAVE_cvt_float_int_ieee): Added missing
	prototype.

	* kaffe/kaffevm/jit3/icode.c
	(and_long_const): Fixed ifdef macro as and_long_const may be defined
	in any cases.
	(HEADERS): Added the inclusion of fp.h

2005-07-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/powerpc/jit.h: Include jit-labels.h
	(CALL_KAFFE_EXCEPTION): Use apple syntax on register if necessary.

	* kaffe/kaffevm/jit3/icode.c
	(cvt_float_int, cvt_double_int): Imported JIT code to do a precise NaN
	conversion.

2005-07-01  Davanum Srinivas <dims@yahoo.com>

	* binreloc/prefix.c: (br_locate) Fix for cygwin.

	* config/i386/trampolines.S: Fixed white space.

2005-07-01  jrandom <jrandom@i2p.net>

	* gnu/java/net/PlainDatagramSocketImpl.java: Removed synchronized
	modifier for all native methods in order to make multi-threaded 
	code operating on a single socket.

2005-06-30  Dalibor Topic  <robilad@kaffe.org>

        * kaffe/kaffevm/jit/Makefile.am:
	(AM_CCASFLAGS) Fixed stupid typo due to lack of coffee.

2005-06-29  Dalibor Topic  <robilad@kaffe.org>

	* include/nets.h: Guarded include of config.h. Include netdb.h.
	Check for H_ERRNO_DECLARED rather than h_errno.

	* libraries/clib/native/Class.c: 
	(java_lang_class_VMClass_checkAccess) Fixed prototype.

	Build fixes for Cygwin.

2005-06-29  Dalibor Topic  <robilad@kaffe.org>

        * include/kaffe/trampoline.h: New file, with code shared
	by all trampoline implementations.

        * config/alpha/trampolines.S,
        config/arm/trampolines.S,
        config/i386/trampolines.S,
        config/m68k/trampolines.S,
        config/mips/trampolines.S,
        config/powerpc/trampolines.S,
        config/sh/trampolines.S,
        config/sparc/trampolines.S:
	Include kaffe/trampoline.h.

        * kaffe/kaffevm/jit3/Makefile.am,